fix: stabilize workflow previews and clean technical debt

--- a/index.html
+++ b/index.html
@@ -729,11 +729,7 @@
             </div>
 
             <div class="modal-footer">
-                <div style="display: flex; gap: 16px; align-items: center; justify-content: space-between; width: 100%;">
-                    <label style="display: inline-flex; align-items: center; gap: 8px; color: var(--text-secondary); font-size: 13px;">
-                        <input type="checkbox" id="reportSourcesToggle" onchange="toggleReportSources(this.checked)">
-                        显示引用来源
-                    </label>
+                <div style="display: flex; gap: 16px; align-items: center; justify-content: flex-end; width: 100%;">
                     <div style="display: flex; gap: 12px; justify-content: flex-end;">
                     <button class="btn-secondary" onclick="adjustBusinessReportChapters()">调整章节</button>
                     <button class="btn-secondary" onclick="regenerateBusinessReport()">🔄 重新生成</button>
